--- a/portfolio/src/styles.scss
+++ b/portfolio/src/styles.scss
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+@import "./assets/styles/variables.scss";
+html, body {
+    margin: 0;
+    padding: 0;
+    background-color: $dark-background;
+}
