--- a/portfolio/src/app/pages/home/home.component.html
+++ b/portfolio/src/app/pages/home/home.component.html
@@ -1,3 +1,5 @@
 <app-banner title="TESSA GERMAIN"></app-banner>
 <app-separator title="à propos" direction="left"></app-separator>
 <app-about-me></app-about-me>
+<app-separator title="mes compétences" direction="right"></app-separator>
+<app-competence></app-competence>
