--- a/portfolio/src/app/components/button/button.component.scss
+++ b/portfolio/src/app/components/button/button.component.scss
@@ -1,8 +1,36 @@
-app-separator{
-    width: 80%;
-    display: block;
-    margin: auto;
+@import "../../../assets/styles/mixins.scss";
+@import "../../../assets/styles/variables.scss";
+button {
+    position: relative;
+    padding: 1rem 1.5rem;
+    font-family: "typewriter";
+    color: $white;
+    font-size: 1.2rem;
+    border-radius: 10px;
+    border: 3px solid $white;
+    background-color: transparent;
+
+    &::before {
+        content: '';
+        @include absoluteTL(0 , 0);
+        width: 100%;
+        height: 100%;
+        background-color: $dark-background;
+        border-radius: 10px;
+        z-index: -1;
+    }
+
+    &::after {
+        content: '';
+        @include absoluteTL(10px, 10px);
+        width: 100%;
+        height: 100%;
+        background-color: $purple;
+        border-radius: 10px;
+        z-index: -2;
+    }
 }
+
 .bouton{
     position: relative;
     margin: 25px auto;
