--- a/portfolio/src/app/components/button/button.component.scss
+++ b/portfolio/src/app/components/button/button.component.scss
@@ -1,80 +1,54 @@
 @import "../../../assets/styles/mixins.scss";
 @import "../../../assets/styles/variables.scss";
-button {
-    position: relative;
-    padding: 1rem 1.5rem;
-    font-family: "typewriter";
-    color: $white;
-    font-size: 1.2rem;
-    border-radius: 10px;
-    border: 3px solid $white;
-    background-color: transparent;
 
-    &::before {
-        content: '';
+.button {
+    position: relative;
+    width: fit-content;
+    height: fit-content;
+    display: block;
+
+    p {
+        position: relative;
+        font-family: "typewriter";
+        color: $white;
+        border: 3px solid $white;
+        border-radius: 10px;
+        z-index: 2;
+        background-color: transparent;
+        width: fit-content;
+    }
+
+    .background{
         @include absoluteTL(0 , 0);
         width: 100%;
         height: 100%;
-        background-color: $dark-background;
         border-radius: 10px;
-        z-index: -1;
+        transition: 0.25s;
+
+        &.dark-gray {
+            background-color: $dark-background;
+            z-index: 1;
+        }
+        &.purple {
+            background-color: $purple;
+            top: 12px;
+            left: 12px;
+            z-index: 0;
+        }
     }
 
-    &::after {
-        content: '';
-        @include absoluteTL(10px, 10px);
-        width: 100%;
-        height: 100%;
-        background-color: $purple;
-        border-radius: 10px;
-        z-index: -2;
-    }
-}
+    &:hover {
+        cursor: pointer;
 
-.bouton{
-    position: relative;
-    margin: 25px auto;
-    display: block;
-    border-radius: 10px;
-    padding: 20px 30px;
-    font-family: 'typewriter';
-    font-size: 20px;
-    color: white;
-    border: 3px solid white;
-    width: fit-content;
-    text-decoration: none;
-    /*background-color: #171717;*/
-    transition: 0.5s;
-}
-.bouton::after{
-    position: absolute;
-    content: '';
-    background-color: #820347;
-    border-radius: 0px;
-    width: 100%;
-    height: 100%;
-    top: 12px;
-    left: 12px;
-    z-index: -2;
-    transition: 0.5s;
-}
-.bouton::before{
-    position: absolute;
-    content: '';
-    background-color: #171717;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    transition: 0.5s;
-}
-.bouton:hover::before{
-    width: 0px;
-    height: 0px;
-}
-.bouton:hover::after{
-    border-radius: 10px;
-    top: 5px;
-    left: 5px;
+        .background {
+            &.dark-gray {
+                width: 0px;
+                height: 0px;
+            }
+            &.purple {
+                top: 7px;
+                left: 7px;
+            }    
+        }
+    }
 }
